--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Paulido\\Components\\": "src",
+            "Paulido\\Ui\\": "src",
             "Paulido\\Views\\": "resources/views",
-            "Paulido\\Views\\Components\\": "resources/views/ui"
+            "Paulido\\Views\\Ui\\": "resources/views/ui"
         }
     },
     "extra": {
